VAN-20709 fixes for high contrast

--- a/vtr-ui/src/app/components/page-layout/page-layout.component.scss
+++ b/vtr-ui/src/app/components/page-layout/page-layout.component.scss
@@ -100,12 +100,14 @@
 					background-color: $gaming_bg;
 					@media #{$high_contrast} {
 						border-left: 0;
+						background-color: window;
 					}
 				}
 				&.vtr-page-right-column {
 					background-color: $gaming_dark;
 					@media #{$high_contrast} {
 						border-right: 0;
+						background-color: window;
 					}
 				}
 			}
