--- a/vtr-ui/src/styles-gaming.scss
+++ b/vtr-ui/src/styles-gaming.scss
@@ -1539,11 +1539,8 @@
 
 		.vtr-page-right-column {
 			background: $gaming_rightbg;
-			@media #{$black-on-white} {
-				background: $light;
-			}
-			@media #{$white-on-black} {
-				background: $dark;
+			@media #{$high_contrast} {
+				background: window;
 			}
 			&::after {
 				content: "";
@@ -1553,10 +1550,10 @@
 				width: calc((100vw - 160rem) / 2);
 				right: calc(((100vw - 160rem) / 2) * -1);
 				background: $gaming_rightbg;
-				//background-image: url("/assets/images/gaming/GradientLine@1x.png");
-				//background-repeat: repeat;
-				//background-size: 100% 100%;
 				z-index: 1;
+				@media #{$high_contrast} {
+					background: window;
+				}
 			}
 
 			@media #{$breakpoint_xl3} {
